--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.238",
+    "@iconify/tailwind": "^1.1.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
