--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "framer-motion": "^11.3.30",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
@@ -16,6 +17,7 @@
     "react-dom": "18.2.0",
     "sonner": "^1.5.0",
     "tailwindcss": "3.4.1",
+    "tw-elements": "^2.0.0",
     "typescript": "5.3.3",
     "zustand": "^4.5.5"
   },
