--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "18.2.0",
     "sonner": "^1.5.0",
     "tailwindcss": "3.4.1",
